// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`form/Button Default play-test 1`] = `
<div class="gi-p-4">
  <button data-element="button-container"
          data-module="gieds-button"
          data-testid="govieButton-default-primary-medium-notDisabled"
          class="gi-btn gi-btn-primary gi-btn-regular "
  >
    Button
  </button>
</div>
`;

exports[`form/Button Disabled smoke-test 1`] = `
<div class="gi-p-4">
  <button data-element="button-container"
          data-module="gieds-button"
          data-testid="govieButton-default-primary-medium-disabled"
          class="gi-btn  gi-btn-regular gi-btn-primary-disabled"
  >
    Button
  </button>
</div>
`;

exports[`form/Button WithIcon smoke-test 1`] = `
<div class="gi-p-4">
  <button data-element="button-container"
          data-module="gieds-button"
          data-testid="govieButton-default-primary-medium-notDisabled"
          class="gi-btn gi-btn-primary gi-btn-regular "
  >
    <span data-testid="govie-icon"
          role="presentation"
          class="material-icons gi-block gi-text-[24px]"
    >
      thumb_up
    </span>
    Button
  </button>
</div>
`;

exports[`form/Button WithIconRight smoke-test 1`] = `
<div class="gi-p-4">
  <button data-element="button-container"
          data-module="gieds-button"
          data-testid="govieButton-default-primary-medium-notDisabled"
          class="gi-btn gi-btn-primary gi-btn-regular "
  >
    Button
    <span data-testid="govie-icon"
          role="presentation"
          class="material-icons gi-block gi-text-[24px]"
    >
      thumb_up
    </span>
  </button>
</div>
`;
